--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: GitHub Page from Chao
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Yooooo, Chao is here
 
 # Your name to show in the footer
-author: Some Person
+author: Zichao Hou
 
 # --- List of links in the navigation bar --- #
 
