--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,11 @@ author: Zichao Hou
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "About Me"
+  About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
+    - Sudoku: "https://sudoku.com/"
   Author's home: "https://deanattali.com"
 
 # --- Logo --- #
