--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,26 @@
 # --- Basic options --- #
 
 # Name of website
-title: GitHub Page for Chao
+title: GitHub Page for C o o L
 
 # Short description of your site
-description: Yooooo, Chao is here
+description: 🐱 see what I've found here 🐱
 
 # Your name to show in the footer
-author: Zichao Hou
+author: picapicadepekin 
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   My Links:
-    - Sudoku: "https://sudoku.com/"
-    - Doulingo: "https://www.duolingo.com/"
-  About Me: "aboutme"
+   - neko: "https://tr.twipple.jp/gazoumatome/n/%E3%83%8D%E3%82%B3-117.html"
+  About Me: "coolisacat"
 
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/chao_avatar.jpg"
+avatar: "/assets/img/Colocolo-avatar%20.gif"
 
 # By default, the image is cut into a circle. You can disable this behaviour here.
 round-avatar: true
@@ -37,13 +36,13 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "zichao@gwu.edu"
-  # facebook: deanattali
-  github: Chao8219
-  # twitter: daattali
+  # email: null
+  # facebook: null
+  github: picapicadepekin
+  # twitter: null
   rss: true
 #  reddit: yourname
-  linkedin: zc-hou
+  # linkedin: null
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -67,7 +66,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "AChaosWebsite.com"
+url-pretty: "Picapicadepekin.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -79,15 +78,15 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-border-col: "#EAEAEA"
+navbar-col: "#0099FF"
+navbar-text-col: "#FFFFFF"
+navbar-border-col: "#0099FF"
 page-col: "#FFFFFF"
-link-col: "#008AFF"
+link-col: "#0099FF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-col: "99CCFF"
+footer-text-col: "#3366CC"
+footer-link-col: "#0099FF"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
