--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: GitHub Page for C o o L
 
 # Short description of your site
-description: 🐱 see what I've found here 🐱
+description: see what I've found here
 
 # Your name to show in the footer
 author: picapicadepekin 
@@ -27,7 +27,7 @@ round-avatar: false
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/assets/img/Colocolo-avatar%20.gif"
+title-img: /assets/img/Colocolo-avatar%20.gif
 
 
 # --- Footer options --- #
@@ -60,9 +60,9 @@ social-network-links:
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  linkedin: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
@@ -78,14 +78,14 @@ excerpt_length: 50
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#0099FF"
+navbar-col: "#1F618D"
 navbar-text-col: "#FFFFFF"
-navbar-border-col: "#0099FF"
+navbar-border-col: "#A9CCE3"
 page-col: "#FFFFFF"
 link-col: "#0099FF"
 hover-col: "#0085A1"
-footer-col: "99CCFF"
-footer-text-col: "#3366CC"
+footer-col: "#A9CCE3"
+footer-text-col: "#FFFFFF"
 footer-link-col: "#0099FF"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
@@ -150,7 +150,7 @@ footer-link-col: "#0099FF"
 
 # Character used to separate site title and description in HTML document title
 # and RSS feed title
-title-separator: "-"
+title-separator: "=^0w0^="
 
 # Ruby Date Format to show dates of posts
 date_format: "%B %-d, %Y"
@@ -162,7 +162,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "America/Virginia"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
