--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- Basic options --- #
 
 # Name of website
-title: GitHub Page for C o o L
+title: INTO my Meow Meow
 
 # Short description of your site
-description: 🐱 see what I've found here 🐱
+description: see what I've found here
 
 # Your name to show in the footer
 author: picapicadepekin 
